[package]
name = "polarsteps-to-gpx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.3", features = ["derive"] }
geo-types = "0.7.11"
gpx = "0.10"
serde_json = "1.0"
time = "0.3.30"
