[package]
name = "polarsteps-to-gpx"
version = "0.1.2"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
geo-types = { version = "0.7", default-features = false }
gpx = "0.10"
serde_json = "1"
time = { version = "0.3", default-features = false }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
unwrap_used = "deny"

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization.
codegen-units = 1 # Reduced to increase optimizations.
panic = "abort"   # Abort on panic.
strip = "symbols" # Strip symbols from binary.
